Updated to fix ticket home layout bug

--- a/src/app/components/ticket/ticket-home/ticket-home.component.css
+++ b/src/app/components/ticket/ticket-home/ticket-home.component.css
@@ -152,3 +152,7 @@ ul {
 .notice img {
     width: 1.15rem;
 }
+
+.pc-notice {
+    margin: 1rem 0 -4rem;
+}
